--- a/articulo.html
+++ b/articulo.html
@@ -24,7 +24,7 @@
             <li><a href="#">Mobile</a></li>
         </ul>
     </nav>
-    <a class="header__busqueda" href="#"><i class="fas fa-search"></i><span>Search</span></a></header>
+    <a class="header__busqueda" href="./resultados-busqueda.html"><i class="fas fa-search"></i><span>Search</span></a></header>
 <section class="intro">
     <div class="intro__imagen"><img src="../images/intro.jpg"></div>
     <div class="intro__contenido"><span class="intro__categoria">Noticias</span>
