--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 </head>
 <body>
 <header class="header--principal">
-    <div class="logo logo--header"><img src="../images/logo--header.svg"></div>
+    <div class="logo logo--header"><img src="./images/logo--header.svg"></div>
     <nav class="nav--header">
         <ul>
-            <li><a href="#">Playstation</a></li>
-            <li><a href="#">Xbox</a></li>
-            <li><a href="#">Nintendo</a></li>
-            <li><a href="#">PC</a></li>
-            <li><a href="#">Mobile</a></li>
+            <li><a href="./perfil.html">Playstation</a></li>
+            <li><a href="./perfil.html">Xbox</a></li>
+            <li><a href="./perfil.html">Nintendo</a></li>
+            <li><a href="./perfil.html">PC</a></li>
+            <li><a href="./perfil.html">Mobile</a></li>
         </ul>
     </nav>
-    <a class="header__busqueda" href="#"><i class="fas fa-search"></i><span>Search</span></a></header>
+    <a class="header__busqueda" href="./resultados-busqueda.html"><i class="fas fa-search"></i><span>Search</span></a>
+</header>
 <main class="contenedor--home"><a class="caja--con-fondo caja--grande">
-    <div class="caja__imagen"><img src="../images/cyberpunk-2077.jpg"></div>
+    <div class="caja__imagen"><img src="./images/cyberpunk-2077.jpg"></div>
     <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">Destacadas</span>
         <h2>Cyberpunk 2077 tiene tres prólogos distintos</h2>
         <p>En Cyberpunk 2077 los jugadores podrán seleccionar entre tres historias de origen diferentes, cada una
@@ -38,7 +39,7 @@
         </ul>
     </div>
 </a><a class="caja--con-fondo caja--pequena caja-rdr2">
-    <div class="caja__imagen"><img src="../images/rdr2.jpg"></div>
+    <div class="caja__imagen"><img src="./images/rdr2.jpg"></div>
     <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">PS4</span>
         <h2>Red Dead Redemption 2 llegará a PC</h2></div>
     <div class="caja--con-fondo__stats">
@@ -53,7 +54,7 @@
         <p>Dos nuevos trailers de Apex Legends muestran lo que nos espera en la Temporada 2 del battle royale de
             Respawn.</p><a class="button">Leer mas</a></div>
     <a class="caja--con-fondo caja--pequena caja-ff">
-        <div class="caja__imagen"><img src="../images/ff.jpg"></div>
+        <div class="caja__imagen"><img src="./images/ff.jpg"></div>
         <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">PS4</span>
             <h2>Final Fantasy XIV recibirá una serie live-action en televisión</h2></div>
         <div class="caja--con-fondo__stats">
@@ -64,7 +65,7 @@
             </ul>
         </div>
     </a><a class="caja--con-fondo caja--pequena caja-xbox">
-        <div class="caja__imagen"><img src="../images/xbox.jpg"></div>
+        <div class="caja__imagen"><img src="./images/xbox.jpg"></div>
         <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">XBOX</span>
             <h2>Conoce las actualizaciones de XBOX Game Pass</h2></div>
         <div class="caja--con-fondo__stats">
@@ -75,7 +76,7 @@
             </ul>
         </div>
     </a><a class="caja--con-fondo caja--pequena caja-fortnite">
-        <div class="caja__imagen"><img src="../images/fortnite.jpg"></div>
+        <div class="caja__imagen"><img src="./images/fortnite.jpg"></div>
         <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">FORTNITE</span>
             <h2>Fortnite une fuerzas con Stranger Things</h2></div>
         <div class="caja--con-fondo__stats">
@@ -86,7 +87,7 @@
             </ul>
         </div>
     </a><a class="caja--con-fondo caja--mediana caja-zelda">
-        <div class="caja__imagen"><img src="../images/zelda.jpg"></div>
+        <div class="caja__imagen"><img src="./images/zelda.jpg"></div>
         <div class="caja--con-fondo__contenido"><span class="caja--con-fondo__categoria">Switch</span>
             <h2>Secuela de The Legend of Zelda: Breath of the Wild anunciada en el E3 2019</h2></div>
         <div class="caja--con-fondo__stats">
@@ -99,11 +100,14 @@
     </a>
     <div class="sidebar--listado"><h3>Noticias Destacadas</h3>
         <ul>
-            <li><a href="#"><span class="sidebar--listado__numero">1</span><span class="sidebar--listado__titulo">GTA VI: Filtraciones que son bastante dudosas</span></a>
+            <li><a href="./articulo.html"><span class="sidebar--listado__numero">1</span><span
+                    class="sidebar--listado__titulo">GTA VI: Filtraciones que son bastante dudosas</span></a>
             </li>
-            <li><a href="#"><span class="sidebar--listado__numero">2</span><span class="sidebar--listado__titulo">Secuela de The Legend of Zelda: Breath of the Wild anunciada en el E3 2019</span></a>
+            <li><a href="./articulo.html"><span class="sidebar--listado__numero">2</span><span
+                    class="sidebar--listado__titulo">Secuela de The Legend of Zelda: Breath of the Wild anunciada en el E3 2019</span></a>
             </li>
-            <li><a href="#"><span class="sidebar--listado__numero">3</span><span class="sidebar--listado__titulo">Red Dead Online recibe actualización masiva y sale de Beta</span></a>
+            <li><a href="./articulo.html"><span class="sidebar--listado__numero">3</span><span
+                    class="sidebar--listado__titulo">Red Dead Online recibe actualización masiva y sale de Beta</span></a>
             </li>
         </ul>
     </div>
