Hotfix images footer and favicon

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i|Oswald:400,500,600,700&amp;display=swap">
-    <link rel="stylesheet" href="./sass/platzi-games.css">
+    <link rel="stylesheet"  href="./sass/platzi-games.css">
 
-    <link rel="shortcut icon" href="./images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <script src="https://kit.fontawesome.com/552ebddad2.js"></script>
 </head>
 <body>
@@ -113,7 +113,7 @@
     </div>
 </main>
 <footer class="footer--principal">
-    <div class="logo logo--footer"><img src="../images/logo--footer.svg"></div>
+    <div class="logo logo--footer"><img src="/images/logo--footer.svg"></div>
     <nav class="nav--footer">
         <ul>
             <li><a href="#">Playstation</a></li>
