Hotfix images footer

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
 </main>
 <footer class="footer--principal">
-    <div class="logo logo--footer"><img src="/images/logo--footer.svg"></div>
+    <div class="logo logo--footer"><img src="./images/logo--footer.svg"></div>
     <nav class="nav--footer">
         <ul>
             <li><a href="#">Playstation</a></li>
